# apex-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  package.json  rust-toolchain.toml  test.md
.cargo/: audit.toml
.github/workflows/: benchmark-pr.yml  benchmarks.yml  ci.yml  code-quality.yml  deploy-docs.yml  integration-tests.yml  labeler.yml  release-notifications.yml  release.yml  security.yml  stale.yml
apex-sdk/: Cargo.toml  README.md
apex-sdk-core/: Cargo.toml  README.md
apex-sdk-core/src/: golden_vectors.rs  (+4 more)
apex-sdk-evm/: Cargo.toml  README.md
apex-sdk-evm/benches/: evm_benchmarks.rs
apex-sdk-evm/src/: adapter.rs  broadcaster.rs  cache.rs  contract.rs  fee_estimator.rs  lib.rs  metrics.rs  nonce_manager.rs  pool.rs  provider.rs  receipt_watcher.rs  signer.rs  transaction.rs  wallet.rs
apex-sdk-evm/tests/: disabled_tests_note.md  integration_test.rs  lib_adapter_tests.rs  transaction_tests.rs  transaction_tests.rs.disabled
apex-sdk-substrate/: Cargo.toml  README.md  build.rs
apex-sdk-types/: Cargo.toml  README.md
cli/: Cargo.toml
docs/: API.md  CONTRIBUTING.md  DEPENDENCIES.md  DOCUMENTATION_HUB.md  DOMAINS.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  SYSTEM_ARCHITECTURE.md  Substrate_Features.md  TESTING_FRAMEWORK.md  TESTNETS.md  _config.yml  _redirects  index.html  robots.txt  sitemap.xml  viewer.html
examples/: README.md
examples/price-oracle/: Cargo.toml  main.rs
integration-tests/: Cargo.toml
scripts/: build-cloudflare.js  deploy-docs.sh  extract_benchmark_results.sh
tests/: integration_test.rs
(+66 files in other folders)
