[package]
name = "price-oracle"
version = "0.1.5"
edition = "2021"
publish = false

[dependencies]
apex-sdk = { path = "../../apex-sdk", version = "0.1.5", features = ["evm", "substrate"] }
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
